======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes
- ``Units::getReadableName`` will no longer append a comma to the names of histfigs with no profession

## Misc Improvements

## Documentation

## API
- ``Job``: new functions ``createLinked`` and ``assignToWorkshop``
- ``Units``: new functions ``getFocusPenalty``, ``unbailableSocialActivity``, ``isJobAvailable``

## Lua

- New functions: ``dfhack.jobs.createLinked``, ``dfhack.jobs.assignToWorkshop``, ``dfhack.units.getFocusPenalty``, ``dfhack.units.unbailableSocialActivity``, and ``dfhack.units.isJobAvailable``

## Removed

# 52.03-r1.1

## New Tools

## New Features

## Fixes
- job descriptions of mix dye job will display proper dye names

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.03-r1

## New Tools

## New Features

## Fixes
- `preserve-rooms` will no longer hang on startup in the presence of a cycle in the replacement relationship of noble positions

## Misc Improvements

## Documentation

## API
- Adjusted the logic inside ``Military::removeFromSquad`` to more closely match the game's own behavior

## Lua

## Removed

# 52.02-r2

## New Tools

## New Features

## Fixes
- Several fixes related to changes in file system handling in DF 52.01
- `dig-now`: don't allow UNDIGGABLE stones to be excavated

## Misc Improvements
- `autoclothing`: added a ``clear`` option to unset previously set orders

## Documentation

## API
- Added GUI focus strings for new_arena: ``/Loading`` and ``/Mods``
- ``Filesystem::getBaseDir`` and ``Filesystem::getInstallDir`` added (and made available in Lua)